# python-sandbox

./: .gitignore  Moebius_Solutions_Python_Assessment.docx  README.md  Rectangle.py  __next__.py  adgency_minstack.py  advantis_code_screen.py  animal.py  append_for.py  apple_bayside.py  async_httpx.py  asyncio_aiohttp.py  asyncio_fetch.py  asyncio_threads.py  base62.py  bayside.py  blackjack.py  changing_iterator.py  combine_dicts.py  concat_dict_string.py  concat_lists.py  count_success.py  day_last_month.py  decision_tree_node.py  decorator.py  defaultParamWithType.py  default_args.py  deque_test.py  dev.py  dict_brackets.py  dict_get.py  double_slash.py  encryption.py  example_imports.py  except.py  filtered_urls.txt  fizzbuzz.py  flask_world.py  for_loop_notebook.ipynb  forloop.py  (+80 more)
data_folder/output/: open_ai_calls.json
datafolders/andrew_buensalida/output/: success.json
fake_chatbot_store.py/: README.md  fake.py  fake_openai_websocket.py  fake_twilio_websocket.py
json_dumps_folder/: test.py
json_dumps_folder/json_dumps_folder2/: failing_open_ai_calls.json  json_dumps.py
socket/: TCPClient.py  TCPServer.py
templates/: todo.html
test/: test_export.py
tests/: Rectangle_test.py  test_running_average.py
testy/: test_export.py
